--- a/wiki/JSPDO.wiki
+++ b/wiki/JSPDO.wiki
@@ -15,12 +15,11 @@ Requirements:
 
   * libv8, of course
   * [V8Convert] (it's a header-only library, so there is no major installation hassles).
-  * [V8Convert_ByteArray] - A `ByteArray` class binding using [V8Convert].
+  * The [V8Convert_ByteArray] code (only two files).
   * At least one of sqlite3 and/or MySQLv5.
   * Some patience - the build tree is currently only designed to build directly from [http://code.google.com/p/v8-juice/source/browse/#svn/convert/addons/jspdo the original source tree] packaged together with [V8Convert]. i hope to modularize it someday to make it easy to drop in to arbitrary `v8::convert`-using clients.
 
-See [http://code.google.com/p/v8-juice/source/browse/convert/addons/jspdo/README.txt the README file] for much more detail about the requirements..
-
+See [http://code.google.com/p/v8-juice/source/browse/convert/addons/jspdo/README.txt the README file] for much more detail about the requirements and building the sources outside of their native source tree. 
 
 Supported Drivers:
   * sqlite3
@@ -44,7 +43,7 @@ See [http://code.google.com/p/v8-juice/source/browse/convert/addons/jspdo/README
 
 ==#1: Lifetime Issues==
 
-Database connections and the objects they create have very strict rules about when they must be cleaned up. The JSPDO class has a method called `close()` to release all resources owned by the database connection. The `Statement` handle class (returned by `JSPDO.prepare()`) has a `finalize()` method which _must_ be called _before_ the parent `JSPDO` instance is `close()`ed, or Undefined Behaviour will ensue.
+Database connections and the objects they create have very strict rules about when they must be cleaned up. The JSPDO class has a method called `close()` to release all resources owned by the database connection. The `Statement` handle class (returned by `JSPDO.prepare()`) has a `finalize()` method which _must_ be called _before_ the parent `JSPDO` instance is `close()`ed, or Undefined Behaviour will ensue. _Do not_ rely on garbage collection to free up database-related handles. Doing so will lead the Grief in the form of Undefined Behaviour.
 
 ==#2: Error Reporting/Handling==
 
